updated tables, added scroll to top and scroll sv

--- a/angular-web-app/src/app/app.component.html
+++ b/angular-web-app/src/app/app.component.html
@@ -9,3 +9,6 @@
 
 <!-- Footer -->
 <app-footer [footerContent]="footerContent"></app-footer>
+
+<!-- Back to top -->
+<app-back-to-top [acceleration]="50" [animate]="true" [scrollDistance]="50" [speed]="20"></app-back-to-top>
