--- a/angular-web-app/src/app/components/_admin/manager-files/manager-files.component.html
+++ b/angular-web-app/src/app/components/_admin/manager-files/manager-files.component.html
@@ -24,7 +24,7 @@
       <!-- Elevation -->
       <div class="{{generalContent.cardElevation}}">
         <!-- Table -->
-        <div class="table-responsive">
+        <div class="mat-table-container">
           <table mat-table [dataSource]="dataSource" class="w-100" matSort matSortActive="created"
             matSortDirection="desc">
             <ng-container matColumnDef="thumbnail" sticky>
