--- a/angular-web-app/src/app/components/_admin/page-portfolio/page-portfolio.component.html
+++ b/angular-web-app/src/app/components/_admin/page-portfolio/page-portfolio.component.html
@@ -11,7 +11,7 @@
           <ng-container *ngTemplateOutlet="headerTab"></ng-container>
         </mat-tab>
         <!-- Cards tab -->
-        <mat-tab label="Gallerij">
+        <mat-tab label="Galerij">
           <ng-container *ngTemplateOutlet="portfolioTab"></ng-container>
         </mat-tab>
       </mat-tab-group>
