--- a/angular-web-app/src/app/components/_layout/header/header.component.html
+++ b/angular-web-app/src/app/components/_layout/header/header.component.html
@@ -15,8 +15,8 @@
   <!-- scrolldown -->
   <div class="scrolldown w-100" *ngIf="!small">
     <a (click)="scrollDown()">
-      <!-- <span id="scrolldown"></span> -->
-      <div class="icon-scroll"></div>
+      <span id="scrolldown"></span>
+      <!-- <div class="icon-scroll"></div> -->
     </a>
   </div>
 </header>
