--- a/angular-web-app/src/app/components/_pages/painting-detail/painting-detail.component.html
+++ b/angular-web-app/src/app/components/_pages/painting-detail/painting-detail.component.html
@@ -9,7 +9,7 @@
 
     <!-- Gallery -->
     <section class="page-section">
-      <app-section-title [title]="'Gallerij'" [subTitle]="'Foto'">
+      <app-section-title [title]="'Galerij '" [subTitle]="'Foto'">
       </app-section-title>
       <div class="container" *ngIf="generalContent">
         <div class="row mb-5">
@@ -24,7 +24,7 @@
     <section class="page-section bg-light">
       <app-section-title [title]="'Informatie'" [subTitle]="'Detail'">
       </app-section-title>
-      <div class="container">
+      <div class="container" *ngIf="generalContent">
         <div class="row">
 
           <div class="col-12 col-md-6">
