added filter sheet

--- a/angular-web-app/src/app/components/_pages/painting-detail/painting-detail.component.html
+++ b/angular-web-app/src/app/components/_pages/painting-detail/painting-detail.component.html
@@ -9,8 +9,8 @@
 
     <!-- Gallery -->
     <section class="page-section">
-      <app-section-title [title]="'Galerij '" [subTitle]="'Foto'">
-      </app-section-title>
+      <!-- <app-section-title [title]="'Galerij '" [subTitle]="'Foto'">
+      </app-section-title> -->
       <div class="container" *ngIf="generalContent">
         <div class="row mb-5">
           <div class="col-12">
@@ -22,8 +22,8 @@
 
     <!-- Info -->
     <section class="page-section bg-light">
-      <app-section-title [title]="'Informatie'" [subTitle]="'Detail'">
-      </app-section-title>
+      <!-- <app-section-title [title]="'Informatie'" [subTitle]="'Detail'">
+      </app-section-title> -->
       <div class="container" *ngIf="generalContent">
         <div class="row">
 
