--- a/angular-web-app/src/app/components/gallery/gallery.component.html
+++ b/angular-web-app/src/app/components/gallery/gallery.component.html
@@ -72,10 +72,6 @@
       <button mat-icon-button color="primary" class="m-2" (click)="resetFilters();">
         <mat-icon>replay</mat-icon>
       </button>
-
-      <button mat-icon-button color="accent" class="m-2" (click)="openBottomSheet(filterSheet);">
-        <mat-icon>filter_alt</mat-icon>
-      </button>
     </div>
   </div>
 
@@ -93,17 +89,26 @@
 
 
 
-<!-- Modal -->
-<ng-template #filterSheet>
-  <mat-accordion>
-    <mat-expansion-panel [expanded]="step === 0" (opened)="setStep(0)" class="mat-elevation-z0">
+<!-- Filter sheet -->
+<div #filterBar class="filterBar mat-elevation-z8" (clickOutside)="closeFilters();">
+  <div class="filterBar-buttons">
+    <button mat-icon-button color="accent" class="m-2" (click)="toggleFilter();">
+      <mat-icon>filter_alt</mat-icon>
+    </button>
+    <button mat-icon-button color="primary" class="m-2" (click)="resetFilters();">
+      <mat-icon>replay</mat-icon>
+    </button>
+  </div>
+  <mat-accordion *ngIf="generalContent" class="filterAccordion">
+    <mat-expansion-panel [expanded]="false" class="mat-elevation-z0">
       <mat-expansion-panel-header>
         <mat-panel-title>
           <mat-icon class="mr-0 mr-sm-2">category</mat-icon>
-          <span class="d-none d-sm-inline">Categorie</span>
+          <span [matBadge]="activeFilters.categories.length" [matBadgeHidden]="activeFilters.categories.length == 0"
+            matBadgePosition="after" matBadgeColor="accent">Categorie</span>
         </mat-panel-title>
       </mat-expansion-panel-header>
-      <mat-selection-list #categorylist [(ngModel)]="activeFilters.categories" (ngModelChange)="applyFilters()">
+      <mat-selection-list #categorylistSheet [(ngModel)]="activeFilters.categories" (ngModelChange)="applyFilters()">
         <mat-list-option class="text-capitalize" color="primary" checkboxPosition="after"
           *ngFor="let category of generalContent.paintingCategories" [value]="category">
           {{ category }}
@@ -111,14 +116,14 @@
       </mat-selection-list>
     </mat-expansion-panel>
 
-    <mat-expansion-panel [expanded]="step === 1" (opened)="setStep(1)" class="mat-elevation-z0">
+    <mat-expansion-panel [expanded]="false" class="mat-elevation-z0">
       <mat-expansion-panel-header>
         <mat-panel-title>
           <mat-icon class="mr-0 mr-sm-2">brush</mat-icon>
           <span class="d-none d-sm-inline">Verf</span>
         </mat-panel-title>
       </mat-expansion-panel-header>
-      <mat-selection-list #paintlist [(ngModel)]="activeFilters.paints" (ngModelChange)="applyFilters()">
+      <mat-selection-list #paintlistSheet [(ngModel)]="activeFilters.paints" (ngModelChange)="applyFilters()">
         <mat-list-option class="text-capitalize" color="primary" checkboxPosition="after"
           *ngFor="let paint of generalContent.paintingPaints" [value]="paint">
           {{ paint }}
@@ -126,14 +131,14 @@
       </mat-selection-list>
     </mat-expansion-panel>
 
-    <mat-expansion-panel [expanded]="step === 2" (opened)="setStep(2)" class="mat-elevation-z0">
+    <mat-expansion-panel [expanded]="false" class="mat-elevation-z0">
       <mat-expansion-panel-header>
         <mat-panel-title>
           <mat-icon class="mr-0 mr-sm-2">photo_filter</mat-icon>
           <span class="d-none d-sm-inline">Materiaal</span>
         </mat-panel-title>
       </mat-expansion-panel-header>
-      <mat-selection-list #materiallist [(ngModel)]="activeFilters.materials" (ngModelChange)="applyFilters()">
+      <mat-selection-list #materiallistSheet [(ngModel)]="activeFilters.materials" (ngModelChange)="applyFilters()">
         <mat-list-option class="text-capitalize" color="primary" checkboxPosition="after"
           *ngFor="let material of generalContent.paintingMaterials" [value]="material">
           {{ material }}
@@ -141,14 +146,14 @@
       </mat-selection-list>
     </mat-expansion-panel>
 
-    <mat-expansion-panel [expanded]="step === 3" (opened)="setStep(3)" class="mat-elevation-z0">
+    <mat-expansion-panel [expanded]="false" class="mat-elevation-z0">
       <mat-expansion-panel-header>
         <mat-panel-title>
           <mat-icon class="mr-0 mr-sm-2">local_offer</mat-icon>
           <span class="d-none d-sm-inline">Status</span>
         </mat-panel-title>
       </mat-expansion-panel-header>
-      <mat-selection-list #statelist [(ngModel)]="activeFilters.states" (ngModelChange)="applyFilters()">
+      <mat-selection-list #statelistSheet [(ngModel)]="activeFilters.states" (ngModelChange)="applyFilters()">
         <mat-list-option class="text-capitalize" color="primary" checkboxPosition="after"
           *ngFor="let state of generalContent.paintingStates" [value]="state">
           {{ state }}
@@ -158,4 +163,4 @@
 
   </mat-accordion>
 
-</ng-template>
+</div>
