--- a/angular-web-app/src/app/components/_admin/manager-files/manager-files.component.html
+++ b/angular-web-app/src/app/components/_admin/manager-files/manager-files.component.html
@@ -40,7 +40,7 @@
             </ng-container>
 
             <ng-container matColumnDef="created">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> Toegevoegd </th>
+              <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear> Toegevoegd </th>
               <td mat-cell *matCellDef="let fileUpload"> {{ fileUpload.timestampCreated | date }} </td>
             </ng-container>
 
