--- a/angular-web-app/src/app/components/_admin/manager-messages/manager-messages.component.html
+++ b/angular-web-app/src/app/components/_admin/manager-messages/manager-messages.component.html
@@ -53,7 +53,7 @@
             </ng-container>
 
             <ng-container matColumnDef="created">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> Ontvangen </th>
+              <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear> Ontvangen </th>
               <td mat-cell *matCellDef="let item"> {{ item.timestampCreated | date }} </td>
             </ng-container>
 
