--- a/angular-web-app/src/app/components/_admin/painting-overview/painting-overview.component.html
+++ b/angular-web-app/src/app/components/_admin/painting-overview/painting-overview.component.html
@@ -48,12 +48,12 @@
             </ng-container>
 
             <ng-container matColumnDef="created">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> Toegevoegd </th>
+              <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear> Toegevoegd </th>
               <td mat-cell *matCellDef="let painting"> {{ painting.timestampCreated | date }} </td>
             </ng-container>
 
             <ng-container matColumnDef="updated">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> Bewerkt </th>
+              <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear> Bewerkt </th>
               <td mat-cell *matCellDef="let painting"> {{ painting.timestampUpdated | date }} </td>
             </ng-container>
 
