--- a/angular-web-app/src/app/components/carousel-img/carousel-img.component.html
+++ b/angular-web-app/src/app/components/carousel-img/carousel-img.component.html
@@ -1,21 +1,38 @@
-<mat-card class="card-clean p-0">
+<mat-card *ngIf="images" class="card-clean p-0">
   <div class="container-fluid">
     <div class="row">
       <div class="col-12">
-        <ngb-carousel *ngIf="images">
+
+        <!-- Multi image -->
+        <ngb-carousel *ngIf="images.length > 1">
           <ng-template ngbSlide *ngFor="let image of images">
             <div class="d-flex flex-column align-items-center justify-content-center img-wrapper">
               <!-- Image -->
               <img [src]="image" class="slider-img {{elevation}}">
               <!-- Caption -->
               <div class="slider-img-caption p-3">
-                <button mat-fab color="primary" class="mx-2" aria-label="Show image" (click)="openImage(content, image)">
+                <button mat-fab color="primary" class="mx-2" aria-label="Show image"
+                  (click)="openImage(content, image)">
                   <mat-icon>search</mat-icon>
                 </button>
               </div>
             </div>
           </ng-template>
         </ngb-carousel>
+
+        <!-- Single image -->
+        <div *ngIf="images.length == 1"
+          class="d-flex flex-column align-items-center justify-content-center img-wrapper">
+          <!-- Image -->
+          <img [src]="images[0]" class="slider-img {{elevation}}">
+          <!-- Caption -->
+          <div class="slider-img-caption p-3">
+            <button mat-fab color="primary" class="mx-2" aria-label="Show image" (click)="openImage(content, images[0])">
+              <mat-icon>search</mat-icon>
+            </button>
+          </div>
+        </div>
+
       </div>
     </div>
   </div>
