--- a/angular-web-app/src/app/components/back-to-top/back-to-top.component.scss
+++ b/angular-web-app/src/app/components/back-to-top/back-to-top.component.scss
@@ -1,16 +1,15 @@
-.btn-back-top {
-  position: fixed;
-  right: 35px;
-  bottom: 20px;
-  z-index: 5;
-}
-
 .back-top {
   position: fixed;
-  right: 35px;
+  right: 16px;
   bottom: 0;
   z-index: 5;
   background-color: white;
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
+}
+
+@media (min-width: 768px) {
+  .back-top {
+    right: 32px;
+  }
 }
