--- a/angular-web-app/src/app/components/gallery/gallery.component.html
+++ b/angular-web-app/src/app/components/gallery/gallery.component.html
@@ -15,18 +15,19 @@
 <div #pageContent class="container d-none">
   <div #shuffleContainer class="shuffle-container row">
     <app-painting-card #shuffleItems *ngFor="let painting of paintings"
-      class="col-12 col-md-6 col-lg-4 p-0 shuffle-item" [attr.data-category]="painting.category"
-      [attr.data-paint]="painting.paint" [attr.data-material]="painting.material" [attr.data-status]="painting.status"
-      [painting]="painting" [elevation]="generalContent.cardElevation">
+      class="col-12 col-md-6 col-lg-4 p-0 shuffle-item" [attr.data-title]="painting.title"
+      [attr.data-category]="painting.category" [attr.data-paint]="painting.paint"
+      [attr.data-material]="painting.material" [attr.data-status]="painting.status"
+      [attr.data-created]="painting.timestampCreated" [painting]="painting"
+      [elevation]="generalContent.cardElevation">
     </app-painting-card>
     <div #shuffleSizer class="col-1 shuffle-sizer"></div>
   </div>
 </div>
 
-<!-- Filter sheet -->
-<div #filterBar class="filterBar mat-elevation-z8" (clickOutside)="closeFilters();"
-  [@appearInOut]="filterAnimationState">
-  <div class="filterBar-buttons">
+<!-- Filter -->
+<div #filterBar class="filterBar" (clickOutside)="closeFilters();" [@appearInOut]="filterAnimationState">
+  <div class="filterBar-buttons mat-elevation-z8">
     <button mat-button color="accent" [matBadge]="getActiveFilterCount()" [matBadgeHidden]="getActiveFilterCount() == 0"
       matBadgePosition="after" matBadgeColor="accent" class="m-2" (click)="toggleFilters();">
       <mat-icon>filter_alt</mat-icon>
@@ -38,7 +39,28 @@
     </button>
   </div>
 
-  <mat-accordion *ngIf="generalContent" class="filterAccordion">
+  <mat-accordion *ngIf="generalContent" class="filterAccordion mat-elevation-z8">
+    <!-- Sort -->
+    <mat-expansion-panel *ngIf="galleryContent.filterCategoriesActive" [expanded]="false" class="mat-elevation-z0">
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          <mat-icon class="mr-2">sort</mat-icon>
+          <span>Sorteren</span>
+        </mat-panel-title>
+        <mat-panel-description class="flex-grow-0 mr-5">
+          <span>{{ activeSort }}</span>
+        </mat-panel-description>
+      </mat-expansion-panel-header>
+      <mat-selection-list #sortList [(ngModel)]="activeFilters.sort">
+        <mat-list-option class="text-capitalize" color="primary" checkboxPosition="after" value="dom"
+          (click)="applySort('dom'); activeSort='Standaard'"> Standaard </mat-list-option>
+        <mat-list-option class="text-capitalize" color="primary" checkboxPosition="after" value="title"
+          (click)="applySort('title'); activeSort='Titel'"> Titel </mat-list-option>
+        <mat-list-option class="text-capitalize" color="primary" checkboxPosition="after" value="date-created"
+          (click)="applySort('date-created'); activeSort='Toegevoegd'"> Toegevoegd </mat-list-option>
+      </mat-selection-list>
+    </mat-expansion-panel>
+
     <mat-expansion-panel *ngIf="galleryContent.filterCategoriesActive" [expanded]="false" class="mat-elevation-z0">
       <mat-expansion-panel-header>
         <mat-panel-title>
@@ -49,7 +71,7 @@
           <span *ngIf="activeFilters.categories.length">{{activeFilters.categories.length}}</span>
         </mat-panel-description>
       </mat-expansion-panel-header>
-      <mat-selection-list #categorylistSheet [(ngModel)]="activeFilters.categories" (ngModelChange)="applyFilters()">
+      <mat-selection-list #categorylist [(ngModel)]="activeFilters.categories" (ngModelChange)="applyFilters()">
         <mat-list-option class="text-capitalize" color="primary" checkboxPosition="after"
           *ngFor="let category of generalContent.paintingCategories" [value]="category">
           {{ category }}
@@ -67,7 +89,7 @@
           <span *ngIf="activeFilters.paints.length">{{activeFilters.paints.length}}</span>
         </mat-panel-description>
       </mat-expansion-panel-header>
-      <mat-selection-list #paintlistSheet [(ngModel)]="activeFilters.paints" (ngModelChange)="applyFilters()">
+      <mat-selection-list #paintlist [(ngModel)]="activeFilters.paints" (ngModelChange)="applyFilters()">
         <mat-list-option class="text-capitalize" color="primary" checkboxPosition="after"
           *ngFor="let paint of generalContent.paintingPaints" [value]="paint">
           {{ paint }}
@@ -85,7 +107,7 @@
           <span *ngIf="activeFilters.materials.length">{{activeFilters.materials.length}}</span>
         </mat-panel-description>
       </mat-expansion-panel-header>
-      <mat-selection-list #materiallistSheet [(ngModel)]="activeFilters.materials" (ngModelChange)="applyFilters()">
+      <mat-selection-list #materiallist [(ngModel)]="activeFilters.materials" (ngModelChange)="applyFilters()">
         <mat-list-option class="text-capitalize" color="primary" checkboxPosition="after"
           *ngFor="let material of generalContent.paintingMaterials" [value]="material">
           {{ material }}
@@ -103,7 +125,7 @@
           <span *ngIf="activeFilters.states.length">{{activeFilters.states.length}}</span>
         </mat-panel-description>
       </mat-expansion-panel-header>
-      <mat-selection-list #statelistSheet [(ngModel)]="activeFilters.states" (ngModelChange)="applyFilters()">
+      <mat-selection-list #statelist [(ngModel)]="activeFilters.states" (ngModelChange)="applyFilters()">
         <mat-list-option class="text-capitalize" color="primary" checkboxPosition="after"
           *ngFor="let state of generalContent.paintingStates" [value]="state">
           {{ state }}
